--- a/src/assets/scss/components/card.scss
+++ b/src/assets/scss/components/card.scss
@@ -49,6 +49,7 @@
         padding: 0;
         background: $bg-main;
         @include boxShadow(1px, 1px, 10px, 0px, rgba(67, 67, 67, .3));
+        margin-bottom: 30px;
 
         .card-header {
             padding: 50px 0 30px 0;
@@ -72,7 +73,7 @@
         flex-direction: row;
         background: $bg-main;
         border: none;
-        margin-top: 60px;
+        margin-top: 30px;
         margin-bottom: 60px;
         align-items: center;
         @include boxShadow(1px, 1px, 10px, 0px, rgba(67, 67, 67, .3));
